--- a/roles/role1/meta/main.yml
+++ b/roles/role1/meta/main.yml
@@ -1,6 +1,6 @@
 ---
-dependencies:
-- role: documentations
-  git-url: https://gitlab.com/jasonwcc.my/learntoapache
-- role: documentations
-  git-url: https://github.com/jasonwcc/learntoapache
+#dependencies:
+#- role: documentations
+#git-url: https://gitlab.com/jasonwcc.my/learntoapache
+#- role: documentations
+#git-url: https://github.com/jasonwcc/learntoapache
