--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory = ./inventory
 collections = ./collections
 gathering = explicit
+display_skipped_hosts = false
 
 [privilege_escalation]
 become = True
