--- a/ansible-navigator.yml
+++ b/ansible-navigator.yml
@@ -3,7 +3,7 @@ ansible-navigator:
   ansible:
     cmdline: "--forks 15"
   playbook-artifact:
-    enable: false
+    enable: true
   execution-environment:
     image: registry.redhat.io/ansible-automation-platform-24/ee-supported-rhel8:latest
     pull:
